[front] added pages and styles

--- a/front_prototype/index.html
+++ b/front_prototype/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Home</title>
@@ -11,34 +12,41 @@
 <body>
 
 <div class="header">
-  <h1>TakiMoysha Home Server</h1>
+  <h1>Home Server</h1>
   <p>Server for storing files, simplifying the exchange between the devices of the local network and remote printing</p>
 </div>
 
 <div class="navbar">
-  <a id="menu-item" class="menu-item active">Home</a>
-  <a id="menu-item" class="menu-item">Files</a>
-  <a id="menu-item" class="menu-item">Profile</a>
-  <a id="menu-item" class="menu-item right">Sign In</a>
-  <a id="menu-item" class="menu-item right">Sign Out</a>
+  <a id="menu-item" href="index.html" class="menu-item active">Home</a>
+  <a id="menu-item" href="files.html" class="menu-item">Files</a>
+  <a id="menu-item" href="profile.html" class="menu-item">Profile</a>
+  <a id="menu-item" href="sign_in.html" class="menu-item right">Sign In</a>
 </div>
 
+<div class="row">
+  <div class="side">
+    <h2>Additional column</h2>
+    <p>This block for status, notifications and other dynamic informations</p>
+    <h3>Devices</h3>
+    <p>Block for connected devices</p>
+    <div class="fakeimg" style="height:60px;">Server status</div><br>
+    <div class="fakeimg" style="height:60px;">Printer status</div><br>
+  </div>
+  <div class="main">
+    <h2>Post</h2>
+    <h5>Title description, Dec 7, 2017</h5>
+    <p>Details for the task: Additional materials, links, pictures, etc.</p>
+    <br>
+    <h2>title</h2>
+    <h5>title desc, published date</h5>
+    <div class="fakeimg" style="height:200px;">Image</div>
+    <p>Но элементы политического процесса, превозмогая сложившуюся непростую экономическую ситуацию, своевременно верифицированы. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: новая модель организационной деятельности не даёт нам иного выбора, кроме определения стандартных подходов. Учитывая ключевые сценарии поведения, семантический разбор внешних противодействий напрямую зависит от переосмысления внешнеэкономических политик.</p>
+  </div>
+</div>
 
-<body>
-    <header>
-      <div class="container">
-        <a class="header-logo" href="">Logo<span>small text</span></a>
-        <div class="menu-header-container">
-          <nav id="menu-header" class="menu">
-            <li id="menu-item" class="menu-item"><a href="">Home</a></li>
-            <li id="menu-item" class="menu-item"><a href="">Files</a></li>
-            <li id="menu-item" class="menu-item"><a href="">User</a></li>
-            <li id="menu-item" class="menu-item"><a href="">Login</a></li>
-            <li id="menu-item" class="menu-item"><a href="">Logout</a></li>
-          </nav>
-        </div>
-      </div>
-    </header>
+<div class="footer">
+  <h2>Footer</h2>
+</div>
 
 </body>
 </html>
